fix(build): cyclic dependency in makefile
$(GOENV_MK) is a body level include, so using it as a prerequisite and
as a target dependency caused a cyclic dependency.

Use .eval_goenv rule (and placeholder file) to evaluate variables to be
stored in goenv.mk and use the placeholder as a prerequisite for the
targets that need the goenv.mk content.

commit: dd763f4 (main), cherry-pick

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # dependencies, like source files, changed)
 .check*
 
+# .eval_* files are placeholders as .check* above, but focused on
+# the evaluation of the target, not failing the build if the target
+# is not found
+.eval_*
+
 # needed for the makefile btfhub building logic
 *.md5
 
