--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -2,7 +2,6 @@
 # Creates the official tracee containers.
 #
 
-ARG TARGETARCH
 ARG BTFHUB=0
 ARG FLAVOR=tracee-ebpf-core
 
@@ -102,7 +101,8 @@ RUN apk --no-cache update && \
 
 # install GO
 ARG GO_VERSION
-RUN curl -L -o go${GO_VERSION}.linux-${TARGETARCH}.tar.gz https://go.dev/dl/go${GO_VERSION}.linux-${TARGETARCH}.tar.gz && \
+RUN TARGETARCH=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
+    curl -L -o go${GO_VERSION}.linux-${TARGETARCH}.tar.gz https://go.dev/dl/go${GO_VERSION}.linux-${TARGETARCH}.tar.gz && \
     tar -C /usr/local -xzf go${GO_VERSION}.linux-${TARGETARCH}.tar.gz && \
     echo 'export PATH=$PATH:/usr/local/go/bin' >> /etc/profile && \
     echo 'export GOROOT=/usr/local/go' >> /etc/profile && \
