--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -8,8 +8,6 @@ FROM alpine:3.19 AS alpine-base
 LABEL AS=alpine-base
 USER root
 
-ARG TARGETARCH
-
 # install needed environment
 RUN apk --no-cache update && \
     apk --no-cache add sudo coreutils findutils bash git curl rsync && \
@@ -43,7 +41,8 @@ RUN cd /tmp && \
     ./3rdparty/bpftool.sh
 
 # install OPA
-RUN curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.63.0/opa_linux_${TARGETARCH}_static && \
+RUN TARGETARCH=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
+    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.63.0/opa_linux_${TARGETARCH}_static && \
     chmod 755 /usr/bin/opa
 
 # install extra tools for testing things
@@ -65,7 +64,8 @@ ENV GOTOOLCHAIN="auto"
 ENV PATH=${GOPATH}/bin:${GOROOT}/bin:$PATH
 
 # install Go
-RUN curl -L -o go${GO_VERSION}.linux-${TARGETARCH}.tar.gz https://go.dev/dl/go${GO_VERSION}.linux-${TARGETARCH}.tar.gz && \
+RUN TARGETARCH=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
+    curl -L -o go${GO_VERSION}.linux-${TARGETARCH}.tar.gz https://go.dev/dl/go${GO_VERSION}.linux-${TARGETARCH}.tar.gz && \
     tar -C /usr/local -xzf go${GO_VERSION}.linux-${TARGETARCH}.tar.gz && \
     rm go${GO_VERSION}.linux-${TARGETARCH}.tar.gz
 
