--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
                             - Sudoers Modification: docs/events/builtin/signatures/sudoers_modification.md
                             - Syscall Table Hooking: docs/events/builtin/signatures/syscall_table_hooking.md
                             - SysRQ Modification: docs/events/builtin/signatures/system_request_key_config_modification.md
+                            - format: docs/events/builtin/signatures/format.md
                       - Network Events:
                             - Overview: docs/events/builtin/network/index.md
                             - net_flow_tcp_begin: docs/events/builtin/network/net_flow_tcp_begin.md
@@ -101,11 +102,14 @@ nav:
                             - security_socket_bind: docs/events/builtin/extra/security_socket_bind.md
                             - security_socket_connect: docs/events/builtin/extra/security_socket_connect.md
                             - security_socket_setsockopt: docs/events/builtin/extra/security_socket_setsockopt.md
-                            - security_settime64: docs/docs/events/builtin/extra/security_settime64.md
+                            - security_settime64: docs/events/builtin/extra/security_settime64.md
                             - symbols_collision: docs/events/builtin/extra/symbols_collision.md
                             - symbols_loaded: docs/events/builtin/extra/symbols_loaded.md
                             - vfs_read: docs/events/builtin/extra/vfs_read.md
                             - vfs_readv: docs/events/builtin/extra/vfs_readv.md
+                            - security_path_notify: docs/events/builtin/extra/security_path_notify.md
+                            - set_fs_pwd: docs/events/builtin/extra/set_fs_pwd.md
+                            - tracee_info: docs/events/builtin/extra/tracee_info.md
                       - Syscalls:
                             - Overview: docs/events/builtin/syscalls/index.md
                             - syscalls:
@@ -616,6 +620,7 @@ nav:
                 - Building Tracee: contributing/building/building.md
                 - Building Environment: contributing/building/environment.md
                 - Building Containers: contributing/building/containers.md
+
 theme:
     name: material
     language: "en"
@@ -625,6 +630,7 @@ theme:
         - navigation.tabs.sticky
         - navigation.sections
         - content.tabs.link
+        - content.code.copy
 
 markdown_extensions:
     - pymdownx.highlight
