feat(events): add suspicious_syscall_source event

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -74,6 +74,7 @@ env:
     DNS_DATA_SOURCE
     WRITABLE_DATA_SOURCE
     SET_FS_PWD
+    SUSPICIOUS_SYSCALL_SOURCE
 jobs:
   #
   # DOC VERIFICATION
