feat: add traceectl cli tool
Introduces `traceectl`, a new CLI tool for gRPC client interaction with
`tracee`. It implements the following basic commands specified by the
gRPC API:
- `version` - get the version of the tracee
- `event` - get a description of events offered by the tracee instance
- `event enable/disable` - enable/disable event emit in the tracee instance
- `stream` - stream events from the tracee instance (supports single stream
   and json/table formats)
- `metrics` - get event pipeline metrics from the tracee instance

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -604,6 +604,18 @@ nav:
                 - cache: docs/flags/cache.1.md
                 - capabilities: docs/flags/capabilities.1.md
                 - log: docs/flags/log.1.md
+    - Traceectl: 
+          - Overview: traceectl/index.md
+          - Installation:  traceectl/usage.md
+          - Commands:
+                - event:   traceectl/commands/event.md
+                - metrics:  traceectl/commands/metrics.md
+                - stream:  traceectl/commands/stream.md
+                - version:  traceectl/commands/version.md
+          - Flags:
+                - output:  traceectl/flags/output.md
+                - format:  traceectl/flags/format.md
+                - server:  traceectl/flags/server.md    
     - Tutorials:
           - Overview: tutorials/overview.md
           - Cosign - verify Tracee signature: tutorials/verify-tracee-signature.md
