add Kubernetes, Performance and Man docs to tracee

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -615,6 +615,8 @@ nav:
     - Contributing:
           - Overview: contributing/overview.md
           - Guidelines: contributing/guidelines.md
+          - Performence: contributing/performance.md
+          - Kubernetes: contributing/kubernetes.md
           - Setup Development Machine with Vagrant: contributing/setup-development-machine-with-vagrant.md
           - Building:
                 - Building Tracee: contributing/building/building.md
