fix(ci): add runner type to release workflows
Set INSTANCE_TYPE=LARGE for release workflows as
release demands a runner with higher specs.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
     runs-on: 
       - graas_ami-0cdf7ad6d9627da45_${{ github.event.number }}${{ github.run_attempt }}-${{ github.run_id }}
       - EXECUTION_TYPE=LONG
+      - INSTANCE_TYPE=LARGE
     permissions:
       contents: write
       packages: write
@@ -60,6 +61,7 @@ jobs:
     runs-on:
       - graas_ami-07740487fa433aa54_${{ github.event.number }}${{ github.run_attempt }}-${{ github.run_id }}
       - EXECUTION_TYPE=LONG
+      - INSTANCE_TYPE=LARGE
     permissions:
       contents: write
       packages: write
