* fix(builder): avoid static binary clobbering
commit: a96a3ea (main), cherry-pick

---

* chore(builder): version format & quicker snapshot

This changes the version format (details on #4154).

Also, this makes the snapshot (dev daily) building quicker by not
embedding the BTF files in the tracee binaries.

As daily images are not meant for production, this should not be a
problem, also considering that the majority of the contributors are
running latest kernels.

commit: a1030f8e (main), cherry-pick

---

* chore(ci): use new make snapshot rule

This also removes INSTANCE_TYPE from the snapshot workflow, as it is
expected to be not so resource intensive now.

commit: 7e0d70e1 (main), cherry-pick

--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -38,7 +38,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build
         run: |
-          make -f builder/Makefile.release SNAPSHOT=1
+          make -f builder/Makefile.release snapshot
       - name: Scan Docker Image for Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
@@ -81,7 +81,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build
         run: |
-          make -f builder/Makefile.release SNAPSHOT=1
+          make -f builder/Makefile.release snapshot
       - name: Scan Docker Image for Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
