chore(ci): trigger pr workflow on release branches
Based on the branch triggers on codeql yaml.

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch: {}
   pull_request:
     branches:
-      - main
+      - "main"
+      - "v.*"
     paths:
       - "!docs/**"
       - "!deploy/**"
