fix(ci): remove runners collision
When more than one PR is opened at the same time, the runners were
colliding with each other, due to identical names.

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -297,6 +297,7 @@ jobs:
               output="["
               first=1
               for job in "${!job_names[@]}"; do
+                  timestamp=$(date +%s)
                   ami="${job_names[$job]%% *}"
                   arch="${job_names[$job]##* }"
                   if (( first )); then
@@ -304,7 +305,7 @@ jobs:
                   else
                       output+=","
                   fi
-                  output+="{\"job_name\": \"$job\", \"arch\": \"$arch\", \"ami\": \"$ami\", \"sufix\": \"$num\"}"
+                  output+="{\"job_name\": \"$job\", \"arch\": \"$arch\", \"ami\": \"$ami\", \"sufix\": \"$timestamp\"}"
               done
             output+="]"
             echo "matrix$num=$output" >> $GITHUB_OUTPUT
