fix: filldir64 event
The second parameter (`name`) of filldir64 is currently being
interpreted as the `process name`, whereas it should be
interpreted as the directory entry name (`dirent`).

Also the name of the event was renamed to zeroed_inode in order to be
generic. According to this ref "https://www.kernel.org/doc/html/
latest/filesystems/ext4/directory.html", unused directory entries
are signified by inode = 0.

--- a/performance/benchmark/common/bench.yaml
+++ b/performance/benchmark/common/bench.yaml
@@ -20,7 +20,7 @@ spec:
     - event: security_socket_accept
     - event: hooked_proc_fops
     - event: hooked_seq_ops
-    - event: hidden_inodes
+    - event: zeroed_inodes
     - event: net_packet_dns
     - event: net_packet_http
     - event: container_create
