fix(build): libbpf output
It also removes the 3rdparty/include/stdarg.h file, which is not needed.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 # is not found
 .eval_*
 
+# .build_* files exist to avoid rebuilding the targets that they are
+# associated with.
+.build_*
+
 # needed for the makefile btfhub building logic
 *.md5
 
