--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -24,6 +24,7 @@ updates:
       - "/api"
       - "/types"
       - "/signatures/helpers"
+      - "/cmd/traceectl"
     schedule:
       interval: "daily"
     commit-message:
