chore(ci): restrict codeql trigger
- Restrict codeql trigger to only run for specific files (C, Go).
- Add workflow_dispatch trigger to codeql.
- Use a yaml anchor in codeql to avoid duplication.
- Update release branch name to `release-v*.*.*` for codeql and PR.
- Fix PR formatting.

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -1,14 +1,19 @@
 name: "CodeQL Advanced"
 
 on:
-  push:
+  workflow_dispatch: {}
+
+  push: &common-config
     branches:
       - "main"
-      - "v*.*.*"
+      - "release-v*.*.*"
+    paths:
+      - "**/*.c"
+      - "**/*.h"
+      - "**/*.go"
+
   pull_request:
-    branches:
-      - "main"
-      - "v*.*.*"
+    <<: *common-config
 
 jobs:
   analyze:
